# BreakOut

./: BreakOut  CMakeLists.txt  README.md  build.sh  run.sh
libs/glad/src/: glad.c
src/: ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.h  game_object.h  main.cpp  particle_generator.cpp  particle_generator.h  post_processor.h  power_up.h  sprite.vs  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h
utility/: resource_manager.cpp  resource_manager.h  shader.h  texture.h
